--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@babel/polyfill": "^7.12.1",
         "axios": "^1.8.3",
         "bcrypt": "^5.1.1",
+        "compression": "^1.8.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
