--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Learning node, express, mongoDB",
     "main": "app.js",
     "scripts": {
-        "start:dev": "cross-env NODE_ENV=development nodemon server.js",
+        "start": "node server.js",
+        "dev": "cross-env NODE_ENV=development nodemon server.js",
         "start:prod": "cross-env NODE_ENV=production nodemon server.js",
         "debug": "ndb server.js",
         "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -50,5 +51,8 @@
         "eslint-plugin-react": "^7.37.0",
         "parcel-bundler": "^1.12.5",
         "prettier": "^3.3.3"
+    },
+    "engines": {
+        "node": ">=10.0.0"
     }
 }
